<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFBFC"
    tools:context=".Fragments.Profile.ProfilePage">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="28dp"
        android:text="@string/UserSettingsTitle"
        android:textSize="27dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editProfilePicture"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EFDFCE"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="fill_vertical"
        android:text="@string/editProfileText"
        app:icon="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileUsername" />

    <Button
        android:id="@+id/analytics"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        android:text="@string/analyticsText"
        app:icon="@android:drawable/ic_menu_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSettings" />

    <Button
        android:id="@+id/userSettings"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        android:text="@string/userSettingsText"
        app:icon="@android:drawable/ic_menu_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findFriends" />

    <Button
        android:id="@+id/logOut"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:autoText="false"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        android:text="@string/logOutText"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analytics" />

    <Button
        android:id="@+id/findFriends"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        android:text="@string/findFriendsText"
        app:icon="@android:drawable/ic_menu_myplaces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePicture" />

    <TextView
        android:id="@+id/ProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="124dp"
        android:layout_height="136dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/rounded_background"
        android:scaleType="centerInside"
        android:src="@drawable/corgi_sunglasses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileUsername" />

</androidx.constraintlayout.widget.ConstraintLayout>