<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppBackgroundColour"
    tools:context=".Fragments.Profile.UserSettingsActivity">

    <RelativeLayout
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="User Settings"
            android:layout_centerHorizontal="true"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:drawableStart="@drawable/arrow_back"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:theme="@style/DrawableTint" />
    </RelativeLayout>



    <Button
        android:id="@+id/editProfilePicture"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EFDFCE"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="fill_vertical"
        android:text="@string/pfpText"
        app:icon="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userText" />

    <Button
        android:id="@+id/Notifs"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        android:text="@string/notifwidgetText"
        app:icon="@android:drawable/ic_menu_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findTheme" />

    <Button
        android:id="@+id/appMode"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="29dp"
        android:autoText="false"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        android:text="@string/modeText"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notifs" />

    <ToggleButton
        android:id="@+id/capyMode"
        style="@style/ToggleButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="29dp"
        android:autoText="false"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appMode" />

    <Button
        android:id="@+id/findTheme"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#EFDFCE"
        android:gravity="fill_vertical"
        android:text="@string/themeText"
        app:icon="@android:drawable/ic_menu_myplaces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePicture" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:backgroundTint="#B9C498"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="39dp" />


</androidx.constraintlayout.widget.ConstraintLayout>